- version 1.0.1 - improve the links from querybuilder - remove the test code - change the Doctrine image links - minor changes

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.castsoftware.uc.php.doctrine</name>
+	<name>com.castsoftware.uc.php.doctrine_local</name>
 	<comment></comment>
 	<projects>
 	</projects>
